<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation= "vertical"
    tools:context="com.ibo_android.polyreader.FilePickerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_file_picker_UP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up" />

        <TextView
            android:id="@+id/tv_file_picker_Folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>
    
     <ListView
         android:id="@+id/lv_file_picker_Files"
         android:layout_width="match_parent"
         android:layout_height="378dp"
         android:layout_weight="0.66"
         android:saveEnabled="false" />
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <Button
             android:id="@+id/bt_file_picker_OK"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ok" 
              android:layout_weight="1"/>

         <Button
             android:id="@+id/bt_file_picker_Cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel"
              android:layout_weight="1" />

    </LinearLayout>
    
    
    
    
    
    

</LinearLayout>
